--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -108,6 +108,7 @@ android {
         missingDimensionStrategy "RNN.reactNativeVersion", "reactNative57_5"
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     compileOptions {
 		sourceCompatibility JavaVersion.VERSION_1_8
@@ -143,10 +144,15 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-firebase')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation project(':react-native-navigation')
+    //Firebase
+    implementation "com.google.android.gms:play-services-base:16.1.0"
+    implementation "com.google.firebase:firebase-core:16.0.8"
+    implementation "com.google.firebase:firebase-firestore:18.2.0"
 }
 
 // Run this once to be able to run the application with BUCK
@@ -170,3 +176,5 @@ subprojects { subproject ->
         }
     }
 }
+
+apply plugin: 'com.google.gms.google-services'
