--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.5",
+    "react-native-firebase": "^5.3.1",
     "react-native-navigation": "^2.18.4"
   },
   "devDependencies": {
